src/test/deca/context/valid/valid_essentiel/protected_2.deca
// Description:
//    Programme de tests de l'utilisation des champs protected.
//

class A {
	protected int x;
}

class B extends A {
	C c = new C();
	int y = c.x;
}

class C extends B {}
